src/app/shared/generic-page/table/table.component.scss
.container {
    height: 100%;
    display: flex;
    flex-direction: column;

    .table-main-header {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    .title-section {
		margin-bottom: 5px;
		h1 {
			margin: 0;
		}

        .mat-form-field {
            font-size: 14px;
            width: 100%;
        }
    }

    .action {
        margin-right: 5px;
    }
    
    .table {  
        overflow: auto; 
        height: 100%; 
        flex: 1;
        border: 1px solid #eee;

        table {
            width: 100%;

            tr.mat-header-row {
                height: 50px !important;
                border-radius: 4px;

                th {
                    font-weight: 500;
                    font-size: 16px;
                }
            }

            tr.mat-row:nth-child(even) {
                // background-color: #f8f6ff;
            }
        }

        .selected {
            background-color: #a3a3a3 !important;
        }
    }

    ::ng-deep .mat-sort-header-arrow {
        color: #fff;
    }

    .paginator {
        height: 50px;
        background-color: #f1f1f1;
        border-radius: 4px;
    }

	:host ::ng-deep .mat-form-field-wrapper {
		padding: 0 !important;
	}
}

